# mdeditor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md
src/: ai-pane.ts  backlinks-panel.ts  binary-exts.test.ts  binary-exts.ts  command-palette.ts  csv-renderer.test.ts  csv-renderer.ts  daily-note.test.ts  daily-note.ts  drawio-renderer.test.ts  drawio-renderer.ts  editor.ts  export.test.ts  export.ts  file-tree.ts  fileio.ts  focus-mode.ts  folder-io.ts  frontmatter-editor.ts  frontmatter.test.ts  frontmatter.ts  html-utils.test.ts  html-utils.ts  image-handler.ts  lang-bash.ts  lang-dockerfile.ts  main.ts  marp-renderer.test.ts  marp-renderer.ts  math-renderer.test.ts  math-renderer.ts  mermaid-theme-state.ts  outline-panel.ts  outline.test.ts  outline.ts  palette.test.ts  palette.ts  path-utils.test.ts  path-utils.ts  preview-predicates.ts  (+22 more)
src-shell/: Cargo.toml  README.md
src-shell/src/: acp.rs  acp_commands.rs  commands.rs  dialogs.rs  events.rs  main.rs  pty.rs  sandbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  lib.rs
