[package]
name = "mdeditor-shell"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "mdeditor-shell"
path = "src/main.rs"

[dependencies]
wry = "0.45"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rfd = { version = "0.15", default-features = false }
portable-pty = "0.9"
tokio = { version = "1", features = ["rt", "io-util", "process", "sync", "macros", "time"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
incremental = false

[profile.release.package."*"]
opt-level = "z"
